<resources>
    <string name="app_name">Android Studio</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="BabyBuy">BabyBuy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_item">Upload Item</string>
    <string name="view_items">View Items</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="choose_file">Choose File</string>
    <string name="create_new_item">Create New Item</string>
</resources>