<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/create_new_item"
        android:textSize="26dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_product_description" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_product_price"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="10dp"

        />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        />
    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_item"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_items"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/home"
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_baseline_home_24"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:background="@color/cardview_light_background"
            />

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_baseline_logout_24"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:background="@color/cardview_light_background"
            />


    </RelativeLayout>




</LinearLayout>